--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
   "name": "mpcpp",
   "version": "1.0.0",
-  "description": "",
+  "description": "Interact with your MPD server from node.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "mpd"
+  ],
   "author": "Delapouite <delapouite@gmail.com> (http://delapouite.com)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/delapouite/mpcpp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/delapouite/mpcpp/issues"
+  },
+  "homepage": "https://github.com/delapouite/mpcpp",
   "license": "ISC",
   "dependencies": {
     "mpd": "^1.3.0"
