--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/delapouite/mpcpp",
   "license": "ISC",
   "dependencies": {
-    "mpd": "^1.3.0"
+    "mpd": "^1.3.0",
+    "object.values": "^1.0.3"
   }
 }
